# text-ed

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
docs/: architecture.md  changelog.md  dependencies.md  diagrams.md
src/: CodeHighlighter.cpp  CodeHighlighter.h  Editor.cpp  Editor.h  EditorTheme.cpp  EditorTheme.h  LargeFileReader.cpp  LargeFileReader.h  MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  MarkdownPreview.cpp  MarkdownPreview.h  Minimap.cpp  Minimap.h  RemoteFileBrowser.cpp  RemoteFileBrowser.h  SearchBar.cpp  SearchBar.h  SettingsDialog.cpp  SettingsDialog.h  SshConnectDialog.cpp  SshConnectDialog.h  SshSession.cpp  SshSession.h  TitleBar.cpp  TitleBar.h  main.cpp
